--- a/package.json
+++ b/package.json
@@ -34,12 +34,17 @@
     "@types/webpack": "^5.28.0",
     "rollup": "^2.77.1",
     "rollup-plugin-import-assets": "^1.1.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "shx": "^0.3.4",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "decky-frontend-lib": "^3.21.1",
+    "@glowstudent/youversion": "^1.2.7",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "cheerio-select": "^2.1.0",
+    "decky-frontend-lib": "^3.24.5",
     "react-icons": "^4.4.0"
   },
   "pnpm": {
