--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/webpack": "^5.28.0",
     "rollup": "^2.77.1",
     "rollup-plugin-import-assets": "^1.1.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "shx": "^0.3.4",
     "tslib": "^2.4.0",
